# ML_ClashRoyale

./: .gitignore  README.md
proyecto-ml-clashroyale/: README.md  pyproject.toml  requirements.txt
proyecto-ml-clashroyale/conf/: logging.yml
proyecto-ml-clashroyale/conf/base/: catalog.yml
proyecto-ml-clashroyale/notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb
proyecto-ml-clashroyale/src/proyecto_ml_clashroyale/: __init__.py  __main__.py  pipeline_registry.py  settings.py
proyecto-ml-clashroyale/src/proyecto_ml_clashroyale/pipelines/: __init__.py  business_understanding.py  data_preparation.py  eda.py
proyecto-ml-clashroyale/src/proyecto_ml_clashroyale/pipelines/nodes/: business_understanding_nodes.py  data_preparation_nodes.py  eda_nodes.py
